Bug Hot Fix | Letter spacing header 2 small.css

--- a/lesson4_/css/small.css
+++ b/lesson4_/css/small.css
@@ -22,7 +22,8 @@ body {
   }
   
   header h2 {  
-    font-size: 0.9em;    
+    font-size: 0.9em;
+    letter-spacing: 0;
     margin-top: -28px;
     padding-bottom: 28px;
   }
